fail_crate/tests/unknown_enum_main_option.rs
use inew::New;

#[derive(New)]
#[new(what)]
enum A {}

fn main() {}
